<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.activity.LoginActivity"
    android:gravity="center"
    android:background="@drawable/shape"

    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="330dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp"
            >
            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_account_circle"

                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nik"
                android:layout_marginBottom="10dp"
                android:id="@+id/edt_nik"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:id="@+id/edt_pass"
                android:layout_marginBottom="10dp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnLogin"
                android:text="@string/login"
                android:textAllCaps="false"
                android:background="@drawable/bg_button"
                android:textColor="#fff"

                />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>

