<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.fragment.AccountFragment"
    android:layout_marginTop="10dp"
    >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/shape"
        android:id="@+id/linear"
        >
    <ImageView
        android:layout_width="220dp"
        android:layout_height="110dp"
        android:src="@drawable/ic_face_black_24dp"
        android:layout_gravity="center_horizontal"

        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nama"
              android:text="@string/nama"
            android:textAlignment="center"
            android:textSize="21sp"
            android:textColor="#fff"

            />

     </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/linear"
            android:background="@drawable/bg_white"

            >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:text="@string/email"

            android:layout_marginTop="50dp"
            android:layout_marginStart="16dp"
            android:textSize="19sp"
             android:textColor="#2196f3"
            android:layout_marginLeft="16dp" />
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="16dp"
               android:id="@+id/email"
               android:textColor="#818181"
              android:textSize="16sp"
               android:hint="@string/email"
               android:layout_marginLeft="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/line"
                android:layout_marginRight="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:text="@string/level"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:textSize="19sp"
            android:textColor="#2196f3"
            android:layout_marginStart="16dp" />
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginLeft="16dp"
               android:id="@+id/level"
               android:textColor="#818181"
               android:textSize="16sp"
                android:hint="@string/level"
               />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="16dp"
                android:background="@drawable/line"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp"
                />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/nomor"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:textSize="19sp"
            android:textColor="#2196f3"

            android:layout_marginStart="16dp" />

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginLeft="16dp"
               android:id="@+id/nomor"
               android:textColor="#818181"
               android:textSize="16sp"
               android:hint="@string/nomor"
               android:layout_marginStart="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="16dp"
                android:background="@drawable/line"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="40dp"

                />



        </LinearLayout>

        </RelativeLayout>

</FrameLayout>